Fix spacing

--- a/style.css
+++ b/style.css
@@ -16,9 +16,10 @@
     --rajah: #F7CE74;
 
     /* Spacing */
-    --half: calc(var(--default) / 2);
-    --default: 3rem;
     --double: calc(var(--default) * 2);
+    --default: 3rem;
+    --breather: 2rem;
+    --half: calc(var(--default) / 2);
     --in-between: 1.25rem;
     --small: .5rem;
 }
@@ -54,6 +55,10 @@ h2 {
     border-bottom: solid 4px var(--mine-shaft);
     max-width: 50%;
     padding-bottom: var(--small);
+}
+
+section h3 {
+    margin-top: var(--breather);
 }
 
 /*
